# develop-template-python

./: .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci-workflow.yaml
src/: hello.py
